--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,37 +4,37 @@
 */
 
 /* Global Reset & Box Sizing */
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} */
 
 body {
-  margin: 0;
+  /* margin: 0;
   padding: 0;
   font-family: var(--font-main);
   color: var(--color-text-primary);
-  background-color: var(--color-bg);
+  background-color: var(--color-bg); */
 }
 
 /* Typography */
-h1 {
+/* h1 {
   font-size: var(--font-size-xxl);
   line-height: 1.0;
-}
+} */
 
-h2 {
+/* h2 {
   font-size: var(--font-size-xl);
   line-height: 1.2;
-}
+} */
 
-h3 {
+/* h3 {
   font-size: var(--font-size-lg);
   line-height: 1.3;
-}
+} */
 
-p,
+/* p,
 a,
 li {
   font-size: var(--font-size-base);
@@ -44,7 +44,7 @@ li {
 a {
   color: var(--color-text-primary);
   transition: var(--transition-text);
-}
+} */
 
 a:hover,
 a:focus,
