--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,6 +3,8 @@
   Proprietary – See LICENSE for details. 
 */
 
+/* =====to be deperecated==== */
+
  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
@@ -13,7 +15,7 @@
    /* Brand Colors */
    --color-primary: #890d0d;
    --color-primary-dark: #5f1010;
-   --color-accent: #E04E4E;
+   --color-accent_test: #E04E4E;
    --color-accent-secondary: #ff914d;
    --color-secondary: #373335;
 
