--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -5,7 +5,7 @@
 
 /* 
   HEADER BANNER 
-  Top hero section with image, text overlay, and Material 3 structure.
+  Top hero section with image, text overlay.
 */
 .header-banner {
   position: relative;
@@ -187,6 +187,97 @@
 .justify-evenly {
   justify-content: space-evenly;
 }
+
+/* === FLEXIBLE M3 TABLE === */
+.flex-table {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: var(--md-sys-shape-medium);
+  background-color: var(--md-sys-color-surface-container);
+  box-shadow: var(--md-sys-elevation-1);
+}
+
+/* orientation */
+.flex-table.row {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: flex-start;
+}
+
+.flex-table.column {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+/* table cell */
+.flex-table-cell {
+  display: flex;
+  align-items: baseline;
+  justify-content: baseline;
+  background-color: var(--md-sys-color-surface-container-highest);
+  color: var(--md-sys-color-on-surface);
+  font-family: var(--md-sys-font-family-primary, 'Roboto', sans-serif);
+  border-radius: var(--md-sys-shape-small, 8px);
+  box-shadow: var(--md-sys-elevation-0);
+  transition: background-color 0.2s ease;
+  flex: 0 0 auto;
+  overflow: hidden;
+  position: relative;
+  text-align: left;
+  padding: var(--md-sys-spacing-lg);
+  flex-direction: column;
+  font-size: var(--md-sys-typescale-body-medium);
+}
+
+/* empty cell */
+.flex-table-cell:empty::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+/* size */
+.flex-table-cell.small {
+  width: 120px;
+  height: 100px;
+  font-size: var(--md-sys-typescale-body-small);
+}
+
+.flex-table-cell.medium {
+  width: 180px;
+  height: 140px;
+  font-size: var(--md-sys-typescale-body-medium);
+}
+
+.flex-table-cell.large {
+  width: 240px;
+  height: 180px;
+  font-size: var(--md-sys-typescale-body-large);
+}
+
+.flex-table-cell.xl {
+  width: 300px;
+  height: 220px;
+  font-size: var(--md-sys-typescale-headline-small);
+}
+
+/* Optional header */
+.flex-table-header {
+  font-weight: 600;
+  background-color: var(--md-sys-color-surface-container-highest);
+  color: var(--md-sys-color-on-surface-variant);
+  padding: 0.75rem;
+  border-radius: var(--md-sys-shape-small);
+}
+
+.flex-table-cell.transparent{
+  background-color: transparent;
+}
+
 
 /* === SVG icon inside the button === */
 .icon-button .icon {
@@ -422,7 +513,7 @@ img {
   cursor: pointer;
 
   /* color: var(--md-sys-color-on-surface-variant); */
-  font-size: var(--md-sys-typescale-label-large);
+  font-size: var(----md-sys-typescale-body-medium);
   font-family: var(--md-sys-font-family-secondary);
 
   transition: color var(--md-sys-motion-short);
